etl-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etl-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etl-app
  template:
    metadata:
      labels:
        app: etl-app
    spec:
      containers:
      - name: etl-app
        image: 'europe-docker.pkg.dev/container-412111/hogwarts/etl-app'
