init-mongodb-data-fetcher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: init-mongodb-data-fetcher-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: init-mongodb-data-fetcher
  template:
    metadata:
      labels:
        app: init-mongodb-data-fetcher
    spec:
      containers:
        - name: init-mongodb-data-fetcher
          image: europe-docker.pkg.dev/container-412111/hogwarts/init-mongodb-data-fetcher
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
